fix modal wrapped

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,8 +1,23 @@
 .modal-wrapped {
-    position: absolute;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1;
-    top: 5%;
-    width: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    max-height: 100%;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.modal-wrapped::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.modal-wrapped {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .modal {
